--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^11.1.0",
     "chalk": "^4.1.2",
     "inquirer": "^8.2.6",
+    "inquirer-autocomplete-prompt": "^2.0.1",
     "cli-table3": "^0.6.3",
     "ora": "^5.4.1",
     "glob": "^10.3.10",
