--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,6 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
 SQLAlchemy>=2.0.36
+numpy>=1.24.2
+google-generativeai>=0.8.0
+python-dotenv>=1.0.0
