--- a/tower_cli/package.json
+++ b/tower_cli/package.json
@@ -21,18 +21,19 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
     "chalk": "^4.1.2",
+    "cli-table3": "^0.6.3",
+    "commander": "^11.1.0",
+    "fuse.js": "^7.0.0",
+    "glob": "^10.3.10",
     "inquirer": "^8.2.6",
     "inquirer-autocomplete-prompt": "^2.0.1",
-    "cli-table3": "^0.6.3",
-    "ora": "^5.4.1",
-    "glob": "^10.3.10",
-    "fuse.js": "^7.0.0"
+    "inquirer-file-tree-selection-prompt": "^2.0.5",
+    "ora": "^5.4.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
     "@types/inquirer": "^8.2.10",
+    "@types/node": "^20.10.6",
     "typescript": "^5.3.3"
   }
 }
