--- a/tower_cli/package.json
+++ b/tower_cli/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.12.2",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.3",
     "commander": "^11.1.0",
@@ -28,7 +29,6 @@
     "glob": "^10.3.10",
     "inquirer": "^8.2.6",
     "inquirer-autocomplete-prompt": "^2.0.1",
-    "inquirer-file-tree-selection-prompt": "^2.0.5",
     "ora": "^5.4.1"
   },
   "devDependencies": {
