--- a/tower_cli/package.json
+++ b/tower_cli/package.json
@@ -25,11 +25,8 @@
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.3",
     "commander": "^11.1.0",
-    "fuse.js": "^7.0.0",
     "glob": "^10.3.10",
-    "inquirer": "^8.2.6",
-    "inquirer-autocomplete-prompt": "^2.0.1",
-    "ora": "^5.4.1"
+    "inquirer": "^8.2.6"
   },
   "devDependencies": {
     "@types/inquirer": "^8.2.10",
