--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,5 @@ SQLAlchemy>=2.0.36
 numpy>=1.24.2
 google-generativeai>=0.8.0
 python-dotenv>=1.0.0
+sentence-transformers>=2.2.0
+faiss-cpu>=1.7.4
