--- a/tower_cli/package.json
+++ b/tower_cli/package.json
@@ -2,6 +2,7 @@
   "name": "tower-cli",
   "version": "0.1.0",
   "description": "A CLI tool to help you keep your files synced across devices",
+  "type": "module",
   "main": "dist/index.js",
   "bin": {
     "tower": "./dist/index.js"
@@ -21,6 +22,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@xenova/transformers": "^2.17.1",
     "axios": "^1.12.2",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.3",
