--- a/tower_cli/package.json
+++ b/tower_cli/package.json
@@ -27,8 +27,10 @@
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.3",
     "commander": "^11.1.0",
+    "dotenv": "^17.2.3",
     "glob": "^10.3.10",
-    "inquirer": "^8.2.6"
+    "inquirer": "^8.2.6",
+    "openai": "^6.5.0"
   },
   "devDependencies": {
     "@types/inquirer": "^8.2.10",
